<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="250dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/links"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/url_hint"
            android:inputType="textPersonName"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/clear_text"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:padding="10dp"
            android:background="@drawable/ic_clear"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:background="@color/text_color"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/download"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="?buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:background="@color/lBlue"
            android:layout_marginStart="5dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>