<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_clear"
        android:layout_gravity="end"
        android:id="@+id/close_dialog"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center|start"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/select_show"
        />

        <Button
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lBlue"
            android:layout_margin="30dp"
            android:text="@string/select_image"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lBlue"
            android:text="@string/select_video"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:textStyle="bold" />
</LinearLayout>